test/data/semantic-errors/type-mismatch-operators.ava
var anotherFunction = () -> true + 2 end;